    -D_FILE_OFFSET_BITS=64
  [30843] potential use-after-free in getcanonname (CVE-2023-4806)
  [31476] resolv: Track single-request fallback via _res._flags
  [31184] FAIL: elf/tst-tlsgap
  [31185] Incorrect thread point access in _dl_tlsdesc_undefweak and _dl_tlsdesc_dynamic
  [31890] resolv: Allow short error responses to match any DNS query
  [31965] rseq extension mechanism does not work as intended
  [31968] mremap implementation in C does not handle arguments correctly
  [32052] Name space violation in fortify wrappers
  [32137] libio: Attempt wide backup free only for non-legacy code
  [32470] x86: Avoid integer truncation with large cache sizes
  [32582] Fix underallocation of abort_msg_s struct (CVE-2025-0395)
  [32987] elf: Fix subprocess status handling for tst-dlopen-sgid
  [33185] Fix double-free after allocation failure in regcomp

Security related changes:

  CVE-2023-4806: When an NSS plugin only implements the
  _gethostbyname2_r and _getcanonname_r callbacks, getaddrinfo could use
  memory that was freed during buffer resizing, potentially causing a
  crash or read or write to arbitrary memory.

  CVE-2023-5156: The fix for CVE-2023-4806 introduced a memory leak when
  an application calls getaddrinfo for AF_INET6 with AI_CANONNAME,
  AI_ALL and AI_V4MAPPED flags set.

  CVE-2023-4911: If a tunable of the form NAME=NAME=VAL is passed in the
  environment of a setuid program and NAME is valid, it may result in a
  buffer overflow, which could be exploited to achieve escalated
  privileges.  This flaw was introduced in glibc 2.34.

  CVE-2025-0395: When the assert() function fails, it does not allocate
  enough space for the assertion failure message string and size
  information, which may lead to a buffer overflow if the message string
  size aligns to page size.

Version 2.35

Major new features:

* Unicode 14.0.0 Support: Character encoding, character type info, and
  transliteration tables are all updated to Unicode 14.0.0, using